# web_broswer_Agent

./: README.md
backend/: README.md  a_agent.py  main.py  requirements.txt
frontend/: .gitignore  Dockerfile  README.md  index.html  main.py  package-lock.json  pyproject.toml
frontend/src/: App.tsx
frontend/src/components/: BrowserView.tsx  GoalInput.tsx  Sidebar.tsx  ThoughtLog.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/types/: index.tsx
