[project]
name = "browser-agent"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "playwright>=1.50.0",
    "python-dotenv>=1.0.0",
    "openai>=1.50.0",
    "pillow>=11.0.0",
    "pandas>=2.0.0",
    "tabulate>=0.9.0",
    "pydantic>=2.0.0",
    "nest-asyncio>=1.6.0",
    "ipython>=8.0.0",
    "fastapi>=0.136.3",
    "uvicorn>=0.48.0",
    "websockets>=16.0",
    "python-multipart>=0.0.29",
]
